crates/wgso/tests/cases_invalid/directive_parsing/.expected
error: expected `shader` or `run`
 --> ./tests/cases_invalid/directive_parsing/multiple_expected_token.wgsl:2:2
  |
2 | #invalid
  |  ^^^^^^^
  |
error: expected `compute`
 --> ./tests/cases_invalid/directive_parsing/single_expected_token.wgsl:2:9
  |
2 | #shader<invalid> test
  |         ^^^^^^^
  |